# ament_modern_cmake_example

./: .gitignore  README.md
ex_simp/: CMakeLists.txt  package.xml
ex_simp/include/ex_simp/: ex_thing.hpp
ex_simp/src/: ex_thing.cpp
im_simp/: CMakeLists.txt  package.xml
im_simp/include/im_simp/: im_thing.hpp
im_simp/src/: im_thing.cpp
