<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>im_simp</name>
  <version>0.0.0</version>
  <description>Import a target</description>
  <maintainer email="clyde@mcqueen.net">clyde</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ex_simp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
